new Service - teamSvc - isolating team details from main js

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
 <script src="js/wt.js"></script>
+<script src="js/teamSvc.js"></script>
+<script src="js/packageSvc.js"></script>
 
 <script src="lightbox/js/lightbox.js"></script>
 <script>
