--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <script src="js/wt.js"></script>
 <script src="js/teamSvc.js"></script>
 <script src="js/packageSvc.js"></script>
+<script src="js/gallerySvc.js"></script>
 
 <script src="lightbox/js/lightbox.js"></script>
 <script>
@@ -21,6 +22,7 @@
 <link href="https://fonts.googleapis.com/css?family=Tangerine|Great+Vibes|Arima+Madurai:100|Fredericka+the+Great|Roboto:100|Roboto+Slab:100|Slabo+27px" rel="stylesheet">
 <link rel='stylesheet' href='css/wt.css'/>
 <link rel='stylesheet' href='css/team.css'/>
+<link rel='stylesheet' href='css/gallery.css'/>
 </head>
 <body ng-app='app' ng-controller='ctrl'>
 	<!--<div class='modal' ng-class='{active:showModal}'></div>
@@ -103,7 +105,6 @@
 		
 		<div class='clearfix' ng-include="'template/showcase.html'"></div>
 		
-		<div class='clearfix' ng-include="'template/videos.html'" ng-if='showcase==2'></div>	
 	
 		<div class="col-lg-12 clearfix text-center" style="padding-top: 50px;">
 			<span class='spf'>Connect with us:</span> 
