--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <html>
 <head>
 <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<meta charset="utf-8" name="company" content="Wishtree Cinemas"/>
+<meta charset="utf-8" name="description" content="Wedding Photography & Videography Toronto, Brampton, Scarborough, Mississagua, GTA"/>
+<meta charset="utf-8" name="keywords" content="Wishtree Cinemas, Wedding, Photography, Videography, Toronto, gta, Mississagua, Scarborough, whitby"/>
+<meta charset="utf-8" name="robot" content="index"/>
+
+<title>Wishtree Cinemas | Toronto | GTA | Wedding Photography & Videography</title>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
 <script src="js/wt.js"></script>
@@ -50,7 +56,7 @@
 		<div class='container'>
 			<ul class="nav nav-tabs pull-left">
 			  <li class='pull-left'><div id='wt-logo' ></div><li>
-			  <li class='pull-left'><h3 id='wt-cName'>WishTree Cinemas</h3><li>	
+			  <li class='pull-left hidden-xs'><h3 id='wt-cName'>WishTree Cinemas</h3><li>	
 			  <div class='clearfix' style='padding-top:25px'>
 			</ul>
 			<ul class="nav nav-tabs pull-right" style='margin-top:25px;'>  
