--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<meta charset="utf-8" name="company" content="Wishtree Cinemas"/>
+<meta charset="utf-8" name="company" content="WishTree Cinemas"/>
 <meta charset="utf-8" name="description" content="Wedding Photography & Videography Toronto, Brampton, Scarborough, Mississagua, GTA"/>
-<meta charset="utf-8" name="keywords" content="Wishtree Cinemas, Wedding, Photography, Videography, Toronto, gta, Mississagua, Scarborough, whitby"/>
+<meta charset="utf-8" name="keywords" content="WishTree Cinemas, Wedding, Photography, Videography, Toronto, gta, Mississagua, Scarborough, whitby"/>
 <meta charset="utf-8" name="robot" content="index"/>
 
-<title>Wishtree Cinemas | Toronto | GTA | Wedding Photography & Videography</title>
+<title>WishTree Cinemas | Toronto | GTA | Wedding Photography & Videography</title>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
 <script src="js/wt.js"></script>
