New Video Services to manage video better

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <script src="js/gallerySvc.js"></script>
 <script src="js/partnerSvc.js"></script>
 <script src="js/showcaseCtrl.js"></script>
+<script src="js/videoSvc.js"></script>
 <script src="js/promo.js"></script>
 
 <script src="lightbox/js/lightbox.js"></script>
