contracts module - login page added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <script>!function(e,t,a,n,c,o,s){e.GoogleAnalyticsObject=c,e[c]=e[c]||function(){(e[c].q=e[c].q||[]).push(arguments)},e[c].l=1*new Date,o=t.createElement(a),s=t.getElementsByTagName(a)[0],o.async=1,o.src="https://www.google-analytics.com/analytics.js",s.parentNode.insertBefore(o,s)}(window,document,"script",0,"ga"),ga("create","UA-100340149-1","auto"),ga("send","pageview");</script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
+<script src="js/initNg.js"></script>
 <script src="js/wt.js"></script>
+<script src="js/logo.js"></script>
 <script src="js/rollerSvc.js"></script>
 <script src="js/teamSvc.js"></script>
 <script src="js/packageSvc.js"></script>
