contract form update

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 <link rel='stylesheet' href='css/team.css'/>
 <link rel='stylesheet' href='css/gallery.css'/>
 <link rel='stylesheet' href='css/promo.css'/>
+<link rel="stylesheet" href="css/moment/moment.min.css">
 
 </head>
 <body ng-app='app' ng-controller='ctrl'>
